Add basic user management
- Add a user management endpoint
- Add a project management endpoint
- Add an administration section to the frontend
- Add a user management section to admin frontend
- Refactor headers into a single component
- Refactor page layout into a single component
- Update pre-commit
- Pin Werkzeug until dependencies handle removal of function in Werkzeug
- Other minor updates and bug fixes
